include/svx/sidebar/AreaTransparencyGradientPopup.hxx
@@ -45,11 +45,11 @@ private:
     std::unique_ptr<weld::MetricSpinButton> mxMtrTrgrEndValue;
     std::unique_ptr<weld::MetricSpinButton> mxMtrTrgrBorder;
 
-    // MCGR: Preserve in-between ColorStops until we have an UI to edit these
+    // MCGR: Preserve ColorStops until we have a UI to edit these
     basegfx::BColorStops maColorStops;
 
     void InitStatus(XFillFloatTransparenceItem const* pGradientItem);
-    void ExecuteValueModify(sal_uInt8 nStartCol, sal_uInt8 nEndCol);
+    void ExecuteValueModify();
     DECL_LINK(ModifiedTrgrHdl_Impl, weld::MetricSpinButton&, void);
     DECL_LINK(Left_Click45_Impl, const OUString&, void);
     DECL_LINK(Right_Click45_Impl, const OUString&, void);
