svx/source/sidebar/area/AreaPropertyPanelBase.cxx
@@ -488,9 +488,11 @@ void AreaPropertyPanelBase::FillStyleChanged(bool bUpdateModel)
                     mxLbFillGradFrom->SelectEntry(Color(aGradient.GetColorStops().front().getStopColor()));
                     mxLbFillGradTo->SelectEntry(Color(aGradient.GetColorStops().back().getStopColor()));
 
-                    // MCGR: preserve in-between ColorStops if given
-                    if (aGradient.GetColorStops().size() > 2)
-                        maColorStops = basegfx::BColorStops(aGradient.GetColorStops().begin() + 1, aGradient.GetColorStops().end() - 1);
+                    // MCGR: preserve ColorStops if given
+                    // tdf#155901 We need offset of first and last stop, so include them.
+                    if (aGradient.GetColorStops().size() >= 2)
+                        maColorStops = basegfx::BColorStops(aGradient.GetColorStops().begin(),
+                                                            aGradient.GetColorStops().end());
                     else
                         maColorStops.clear();
 
@@ -515,9 +517,11 @@ void AreaPropertyPanelBase::FillStyleChanged(bool bUpdateModel)
                         mxLbFillGradFrom->SelectEntry(Color(aGradient.GetColorStops().front().getStopColor()));
                         mxLbFillGradTo->SelectEntry(Color(aGradient.GetColorStops().back().getStopColor()));
 
-                        // MCGR: preserve in-between ColorStops if given
-                        if (aGradient.GetColorStops().size() > 2)
-                            maColorStops = basegfx::BColorStops(aGradient.GetColorStops().begin() + 1, aGradient.GetColorStops().end() - 1);
+                        // MCGR: preserve ColorStops if given
+                        // tdf#155901 We need offset of first and last stop, so include them.
+                        if (aGradient.GetColorStops().size() >= 2)
+                            maColorStops = basegfx::BColorStops(aGradient.GetColorStops().begin(),
+                                                                aGradient.GetColorStops().end());
                         else
                             maColorStops.clear();
 
@@ -1369,14 +1373,19 @@ basegfx::BColorStops AreaPropertyPanelBase::createColorStops()
 {
     basegfx::BColorStops aColorStops;
 
-    aColorStops.emplace_back(0.0, mxLbFillGradFrom->GetSelectEntryColor().getBColor());
-
-    if(!maColorStops.empty())
+    if (maColorStops.size() >= 2)
     {
-        aColorStops.insert(aColorStops.begin(), maColorStops.begin(), maColorStops.end());
+        aColorStops.emplace_back(maColorStops.front().getStopOffset(),
+                                 mxLbFillGradFrom->GetSelectEntryColor().getBColor());
+        aColorStops.insert(aColorStops.begin(), maColorStops.begin() + 1, maColorStops.end() - 1);
+        aColorStops.emplace_back(maColorStops.back().getStopOffset(),
+                                 mxLbFillGradTo->GetSelectEntryColor().getBColor());
     }
-
-    aColorStops.emplace_back(1.0, mxLbFillGradTo->GetSelectEntryColor().getBColor());
+    else
+    {
+        aColorStops.emplace_back(0.0, mxLbFillGradFrom->GetSelectEntryColor().getBColor());
+        aColorStops.emplace_back(1.0, mxLbFillGradTo->GetSelectEntryColor().getBColor());
+    }
 
     return aColorStops;
 }
